fix slider behaviour when slider content is overflowed

--- a/src/app/components/Slider/Slider.scss
+++ b/src/app/components/Slider/Slider.scss
@@ -3,6 +3,7 @@
 .coloured-slider{
   width: 100%;
   color: $white;
+  height: 1.5rem;
   font-size: 0.9em;
   text-align: center;
 
